// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should test todoController should test create method 1`] = `
{
  "json": [MockFunction] {
    "calls": [
      [
        {
          "_id": "fugiat Lorem irure",
          "description": "fugiat Lorem irure",
          "fugiat00": -16000000,
          "title": "fugiat Lorem irure",
          "todoId": "fugiat Lorem irure",
        },
      ],
    ],
    "results": [
      {
        "type": "return",
        "value": undefined,
      },
    ],
  },
  "setHeader": [MockFunction] {
    "calls": [
      [
        "Location",
        "/v1/todos/cbb19829-0a6b-4c99-8ca6-ccdc68f2de39",
      ],
    ],
    "results": [
      {
        "type": "return",
        "value": undefined,
      },
    ],
  },
}
`;

exports[`should test todoController should test delete method 1`] = `undefined`;

exports[`should test todoController should test update method 1`] = `
{
  "json": [MockFunction] {
    "calls": [
      [
        {
          "_id": "fugiat Lorem irure",
          "description": "fugiat Lorem irure",
          "fugiat00": -16000000,
          "title": "fugiat Lorem irure",
          "todoId": "fugiat Lorem irure",
        },
      ],
    ],
    "results": [
      {
        "type": "return",
        "value": undefined,
      },
    ],
  },
  "setHeader": [MockFunction] {
    "calls": [
      [
        "Location",
        "/v1/todos/defaultString",
      ],
    ],
    "results": [
      {
        "type": "return",
        "value": undefined,
      },
    ],
  },
}
`;
